[package]
name        = "cuprate-database-benchmark"
version     = "0.0.0"
edition     = "2021"
description = "Benchmarking for Cuprate's database abstraction"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/database/benchmark"
keywords    = ["cuprate", "database", "benchmark"]

[features]
default   = []

[dependencies]
criterion        = { workspace = true }
cuprate-database = { path = "../", features = ["default"] }
cuprate-helper   = { path = "../../helper", features = ["fs", "thread"] }
# cuprate-types    = { path = "../../types", features = ["service"] }
tempfile         = { version = "3.10.0" }

[[bench]]
name    = "lib"
harness = false