[package]
name = "cuprate-epee-encoding"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Boog900"]
readme = "README.md"
keywords = ["monero", "epee", "no-std"]
description = "Epee binary format library."
repository = "https://github.com/Boog900/epee-encoding"

[features]
default = ["std"]
std = ["dep:thiserror", "bytes/std", "cuprate-fixed-bytes/std"]

[dependencies]
cuprate-fixed-bytes = { workspace = true, default-features = false }

paste = "1.0.15"
ref-cast = "1.0.23"
bytes = { workspace = true }
thiserror = { workspace = true, optional = true}

[dev-dependencies]
hex = { workspace = true, features = ["default"] }

[lints]
workspace = true
