[package]
name = "cuprate-epee-encoding"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Boog900"]
readme = "README.md"
keywords = ["monero", "epee", "no-std"]
description = "Epee binary format library."
repository = "https://github.com/Cuprate/cuprate/tree/main/net/epee-encoding"

[features]
default = ["std", "debug"]
std = ["dep:thiserror", "bytes/std", "cuprate-fixed-bytes/std"]
debug = ["dep:serde_json"]

[dependencies]
cuprate-fixed-bytes = { workspace = true, default-features = false }
cuprate-hex         = { workspace = true, default-features = false }

paste = "1.0.15"
ref-cast = "1.0.23"
bytes = { workspace = true }
thiserror = { workspace = true, optional = true }
serde_json = { workspace = true, features = ["std"], optional = true }

[dev-dependencies]
hex = { workspace = true, features = ["default"] }

[lints]
workspace = true
