[package]
name = "cuprate-fixed-bytes"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Boog900"]

[features]
default = ["std", "serde"]
std = ["bytes/std", "dep:thiserror"]
serde = ["bytes/serde", "dep:serde"]

[dependencies]
thiserror = { workspace = true, optional = true }
bytes = { workspace = true }
serde = { workspace = true, optional = true }