[package]
name = "cuprate-fixed-bytes"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Boog900"]

[features]
default = ["std", "serde"]
std = ["bytes/std", "dep:thiserror"]
serde = ["bytes/serde", "dep:serde"]

[dependencies]
thiserror = { workspace = true, optional = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true